@@ -56,6 +56,8 @@ context=isdn-in  ;context for incoming calls
                  ;or your files may get choppy. (you can use capicommand(echosquelch|no) for this)
 ;echocancel=yes  ;Dialogic(R) Diva(R) (CAPI) echo cancellation (yes=g165)
                  ;(possible values: 'no', 'yes', 'force', 'g164', 'g165') 
+;echocancelpath=1;Dialogic(R) Diva(R) (CAPI) echo cancellation path
+                 ;(possible values: default '1' - E.1/T.1/S0, '2' - IP, '3' - both)
 echocancelold=yes;use facility selector 6 instead of correct 8 (necessary for older eicon drivers)
 ;echotail=64     ;echo cancel tail setting (default=0 for maximum)
 ;echocancelnlp=1 ;activate non-linear-processing; this improves echo cancel ratio, but might
